# cookie-pyrate

./: .gitignore  README.md  cookiecutter.json
docs/src/: mkdocs.yml
docs/src/docs/: about.md
hooks/: post_gen_project.py  pre_prompt.py
tests/: conftest.py  test_docker_image.py  test_docs.py  test_licence.py  test_package_name.py  test_pre_commit.py  test_repo_name.py  test_valid_repo_name.py  test_versioning.py
{{cookiecutter.repo_name}}/: .env.example  .env.test  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/_licenses/: Apache-2.0  MIT  Propietary  Proprietary
{{cookiecutter.repo_name}}/scripts/: example.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.repo_name}}/tests/: test_main.py
