[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">= {{ cookiecutter.python_version }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
{% if cookiecutter.license != "None" %}license = { text = "{{ cookiecutter.license }}" }{% endif %}

dependencies = []

[dependency-groups]
dev = [
    "bumpver",
    "mypy",
{% if cookiecutter.with_precommit %}    "pre-commit",{% endif %}
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
    "ruff",
]
{% if cookiecutter.with_docs %}
docs = ["mkdocs", "mkdocs-material", "pygments"]
{% endif %}
build = ["build"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
{% if cookiecutter.cli_command %}
[project.scripts]
{{ cookiecutter.cli_command }} = "{{ cookiecutter.package_name }}.main:main"
{% endif %}
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py{{ cookiecutter.python_version | replace('.', '') }}"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins: Check variables shadowing
    "ARG",    # flake8-unusedarguments
    "B",      # flake8-bugbear: Finds likely bugs and design problems
    "C901",   # Mccabe complexity checker
    "ERA",    # Erradicate
    "E4",     # Pycodestyle: Line length, indentation, etc.
    "E7",     # Pycodestyle: Miscellaneous checks
    "E9",     # Pycodestyle: Syntax errors
    "F",      # Pyflakes: Unused imports, undefined variables, etc.
    "FIX",    # Avoid lines containing TODO tags
    "G",      # flake8-logging-format: Ensure logging messages follow best practices.
    "I",      # Isort: Import sorting
    "LOG",    # flake8-logging: Use the logging module correctly
    "N",      # pep8-naming: Enforce naming conventions
    "PGH004", # Enforce specify the rule to avoid on noqa tags
    "PL",     # Pylint
    "PTH",    # flake8-use-pathlib: Enforces pathlib usage
    "RUF",    # Ruff-specific rules: Mostly for handling noqa tags and general stuff
    "S",      # flake8-bandit: Identifies common security issues in code
    "SIM",    # flake8-simplify
    "T20",    # flake8-print: Avoids print in the code
    "UP",     # Pyupgrade
    "W",      # Pycodestyle warnings
]
ignore = [
    "S101", # Use of assert function
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "S101", "PLR2004", "PLR0913"]
"scripts/**" = ["T20"]  # Allow print statements on the scripts


[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
files = ["src", "scripts", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
extra_checks = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-fail-under=80"
python_files = "tests.py test_*.py *_test.py"
pythonpath = "./src"
env_override_existing_values = 1
env_files = [".env.test"]


[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAGNUM]"

[tool.bumpver.file_patterns]
"pyproject.toml" = ['^version = "{version}"', '^current_version = "{version}"']
"src/{{ cookiecutter.package_name }}/__init__.py" = [
    '^__version__ = "{version}"$',
]
